# openapi.yaml
@@ -15,14 +15,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                id:
-                  type: string
-                type:
-                  type: string
-                code:
-                  type: string
+              $ref: '#/components/schemas/SharableRequest'
       responses:
         "200":
           description: OK
@@ -67,12 +60,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                type:
-                  type: string
-                data:
-                  type: object
+              $ref: '#/components/schemas/SharableRequest'
       responses:
         "200":
           description: OK
@@ -136,3 +124,55 @@ paths:
                 properties:
                   result:
                     type: string
+components:
+  schemas:
+    SharableRequest:
+      type: object
+      properties:
+        sharable:
+          oneOf:
+            - type: object
+              required:
+                - id
+                - type
+                - code
+              properties:
+                id:
+                  type: string
+                type:
+                  type: string
+                  enum:
+                    - function
+                code:
+                  type: string
+            - type: object
+              required:
+                - id
+                - type
+                - schema
+                - data
+              properties:
+                id:
+                  type: string
+                type:
+                  type: string
+                  enum:
+                    - datum
+                schema:
+                  type: string
+                data:
+                  type: object
+            - type: object
+              required:
+                - id
+                - type
+                - fields
+              properties:
+                id:
+                  type: string
+                type:
+                  type: string
+                  enum:
+                    - schema
+                fields:
+                  type: object
